#350 corrected response format, changed to plain array of values
